--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "moment": "^2.29.4",
+    "mongodb": "^6.3.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
